--- a/templates/index.twig
+++ b/templates/index.twig
@@ -2,32 +2,22 @@
 
 {% block content %}
 
-    <section class="card" id="mistral-card">
-        <div class="card-content">
+    {% if(api_key) %}
 
-            <h2 class="card-title">Mistral AI</h2>
-            <p style="max-width: 800px;">Ask anything to Mistral AI.</p>
+        <div class="ai-chat-wrapper">
 
+            {{ include('@MistralAI/_conversation.twig') }}
 
-            <div class="chat-wrapper">
-
-                <ul id="mistral-messages-list"></ul>
-
-                <div class="mistral-form-wrapper">
-                    <form action="?" method="POST" id="mistral-form">
-
-                        <div class="mistral-form-group">
-                            <input type="text" name="mistral-prompt" id="mistral-prompt" class="mistral-input"
-                                   autofocus placeholder="Ask Mistral AI..." aria-label="Mistral AI Prompt">
-                            <button type="submit" class="btn mistral-submit" id="mistral-submit-button">Submit</button>
-                        </div>
-
-                    </form>
-                </div>
-
-            </div>
+            {{ include('@MistralAI/_form.twig') }}
 
         </div>
-    </section>
+
+    {% else %}
+
+        <div class="alert alert-info">
+            <strong>API Key is missing!</strong> You need to set your API Key in the general settings as a superuser.
+        </div>
+
+    {% endif %}
 
 {% endblock %}
