setup: Vue Developpement

--- a/assets/less/components/_page.less
+++ b/assets/less/components/_page.less
@@ -1,3 +1,7 @@
+body {
+  min-height: 100vh;
+}
+
 .ai-chat-wrapper {
   max-width: 800px;
   margin-left: auto;
@@ -5,5 +9,5 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  min-height: 726px; //calc(100vh - 233px);
+  min-height: 726px; //calc(100vh - 175);
 }
