--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,7 +4,7 @@
 
     {% if(api_key) %}
 
-        <div class="ai-chat-wrapper">
+        <div class="ai-chat-wrapper" style="min-height: calc(100vh - 175px)">
 
             {{ include('@MistralAI/_conversation.twig') }}
 
