setup: Vue environement

--- a/templates/index_vue.twig
+++ b/templates/index_vue.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-    <div vue-entry="MistralAI.IndexPage"></div>
+    <div vue-entry="MistralAI.Demo"></div>
 
 {% endblock %}
