--- a/templates/index.twig
+++ b/templates/index.twig
@@ -2,6 +2,16 @@
 
 {% block content %}
 
+    {% if(api_key) %}
+
     <div vue-entry="MistralAI.ChatIndexPage"></div>
+
+    {% else %}
+
+        <div class="alert alert-info">
+            <strong>API Key is missing!</strong> You need to set your API Key in the general settings as a superuser.
+        </div>
+
+    {% endif %}
 
 {% endblock %}
